--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@walletconnect/web3-provider": "^1.6.5",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "apollo-server-micro": "^3.5.0",
     "axios": "^0.23.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
+    "graphql": "^16.0.1",
     "hardhat": "^2.6.6",
     "ipfs-http-client": "^50.1.2",
+    "micro": "^9.3.4",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "styled-components": "^5.3.3",
+    "swr": "^1.0.1",
     "universal-cookie": "^4.0.4",
     "walletlink": "^2.1.11",
     "web3": "^1.6.0",
