--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "@metamask/detect-provider": "^1.2.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -21,7 +22,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
-    "graphql": "^16.0.1",
+    "graphql": "^15.7.2",
     "hardhat": "^2.6.6",
     "ipfs-http-client": "^50.1.2",
     "micro": "^9.3.4",
